# etb3

./: .gitignore  CMakeLists.txt  LICENSE  README.md  package-lock.json  package.json  run.sh
adapters/samples/: sample_concat.c  sample_receipt.c
adapters/zk-trace-check/: Cargo.toml
adapters/zk-trace-check/src/: main.rs
demo-output/live-visa/: client-top.cert.cbor  client-top.proof
demo-output/live-visa/chain/: 01-payment.cert.cbor  01-payment.proof  02-visa.cert.cbor  02-visa.proof  03-authority.cert.cbor  03-authority.proof  04-client.proof
docs/: README.md  architecture.md  ui-dashboard.md
examples/: README.md
examples/banking/: customer.etb  teller.etb
examples/delegation/: transitive_bank.etb
examples/live-banking/: customer_node.etb  run_demo.sh  teller_node.etb
examples/live-visa/: authority.etb  client.etb  payment.etb  run_demo.sh  visa.etb
examples/negation/: stratified_access.etb
examples/temporal/: policy_windows.etb
examples/tooling/: tool_chain.etb
examples/visa/: applicant.etb  consulate.etb
include/etb/: ast.h  capability.h  cert.h  distributed.h  engine.h  membership.h  parser.h  registry.h  signer.h  telemetry.h  term.h  trace.h
src/cli/: etbctl.c  etbd.c
src/core/: ast.c  canon.c  canon.h  cbor.c  cbor.h  parser.c  sha256.c  sha256.h  symbol_table.c  term.c
src/engine/: cert.c  delegation.c  engine_internal.h  eval.c  negation.c  strata.c  tables.c  trace.c  unify.c
src/net/: frame.c  rpc.c  tls.c
src/runtime/: artifact_store.c  capability.c  daemon.c  distributed.c  peer.c  registry.c  signer_macos.c  signer_soft.c  snapshot.c  swim.c  telemetry.c
tests/: README.md  test_main.c
tests/integration/: live_seed_banking.sh  live_seed_visa.sh  two_node_banking.sh
ui/: node-presets.json  server.mjs
ui/public/: app.js  index.html  styles.css
